--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
 	<div class="smooth-scroll-wrapper">
 		<div class="content">
-			
+			<div class="img"></div>
+
+			<h1>:lyl</h1>
+			<p>
+				roflaneroflaneroflaneroflaneroflaneroflaneroflaneroflaneroflane
+				roflaneroflaneroflaneroflaneroflaneroflaneroflaneroflaneroflane
+				roflaneroflaneroflaneroflaneroflaneroflaneroflaneroflaneroflane
+				roflaneroflaneroflaneroflaneroflaneroflaneroflaneroflaneroflane
+			</p>
 		</div>
 	</div>
 </body>
